--- a/about-us.html
+++ b/about-us.html
@@ -99,9 +99,8 @@
             <p class="float-end mb-1">
                 <a href="#">Back to top</a>
             </p>
-            <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-            <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a
-                    href="../getting-started/introduction/">getting started guide</a>.</p>
+            <p class="mb-1">Copyright &copy; 2021 David Barbero <a href="mailto:db00300@my.westga.edu">db00300@my.westga.edu</a></p>
+            <p class="mb-0">Fall 2021 / Final Project / CS 6251 / University of West Georgia</p>
         </div>
     </footer>
 
