home page content finished

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="text-md-center bg-secondary p-2 p-sm-3 p-md-5">
                         <h1 class="text-white">Embrace your artistic side.</h1>
-                        <p class="lead text-white">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+                        <p class="lead text-white">Fine Arts Community Education is a welcoming place where kids, teens, and adults from throughout the community gather to experience and learn about the arts and form connections.</p>
                         <p class="mb-0">
                             <a href="about-us.html" class="btn btn-lg btn-primary">Learn more</a>
                         </p>
@@ -73,7 +73,7 @@
                 <div class="col">
                     <div class="text-md-center bg-danger p-2 p-sm-3">
                         <h2 class="text-white">Courses</h2>
-                        <p class="lead text-white">Lorem ipsum</p>
+                        <p class="lead text-white">We offer a variety of courses in visual, performing, and digital art.</p>
                         <p class="mb-0">
                             <a href="courses.html" class="btn btn-lg btn-success">Course Catalog</a>
                         </p>
@@ -83,7 +83,7 @@
                 <div class="col">
                     <div class="text-md-center bg-success p-2 p-sm-3">
                         <h2 class="text-white">Instructors</h2>
-                        <p class="lead text-white">Lorem ipsum</p>
+                        <p class="lead text-white">Programs are led by creative professionals with top-notch credentials.</p>
                         <p class="mb-0">
                             <a href="instructors.html" class="btn btn-lg btn-info">Faculty Directory</a>
                         </p>
@@ -93,9 +93,9 @@
                 <div class="col">
                     <div class="text-md-center bg-info p-2 p-sm-3">
                         <h2 class="text-white">Fees</h2>
-                        <p class="lead text-white">Lorem ipsum</p>
+                        <p class="lead text-white">Costs are affordable even when extra supplies are needed.</p>
                         <p class="mb-0">
-                            <a href="fees.html" class="btn btn-lg btn-secondary">Tuition Calculator</a>
+                            <a href="fees.html" class="btn btn-lg btn-secondary">Cost Calculator</a>
                         </p>
                     </div>
                 </div>
