about us content finished

--- a/about-us.html
+++ b/about-us.html
@@ -67,13 +67,16 @@
                 <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our Location</h2>
-                        <p class="mb-0">Lorem ipsum.</p>
+                        <p class="mb-0">Fine Arts Community Education (aka "FACE") is located in Anytown, USA in the historic downtown district.</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
-                        <h2>Our Building</h2>
-                        <p class="mb-0">Lorem ipsum.</p>
+                        <h2>Memberships</h2>
+                        <p class="mb-2">Become a member to take advantage of special deals and get invitations to exclusive events. All members can enroll in FACE courses at discounted rates.</p>
+                        <p class="mb-0">Bronze level: 10% Discount</p>
+                        <p class="mb-0">Silver level: 25% Discount</p>
+                        <p class="mb-0">Gold level: 50% Discount</p>
                     </div>
                 </div>
             </div>
@@ -81,13 +84,13 @@
                 <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our History</h2>
-                        <p class="mb-0">Lorem ipsum.</p>
+                        <p class="mb-0">Our school opened in 2003 when the founding director of FACE, William Goodman, received a large philanthropic gift from the GloboChem Corporation. The building now occupied by FACE was previously a middle school that was operated by the Anytown County School District.</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4">
                     <div class="p-3 bg-dark text-white">
                         <h2>Our Mission</h2>
-                        <p class="mb-0">Lorem ipsum.</p>
+                        <p class="mb-0">The FACE Center exists to bring visual, performing, and digital arts programs to adults, teens, and children across all parts of the Anytown, USA region.</p>
                     </div>
                 </div>
             </div>
