courses page content finished

--- a/courses.html
+++ b/courses.html
@@ -21,10 +21,10 @@
                     <img src="pics/face-logo.svg" alt="FACE Logo" height="64" class="d-inline-block align-text-middle">
                     FACE
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                <a class="navbar-toggler" href="fees.html" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </a>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav me-auto mb-2 mb-md-0">
                         <span class="navbar-text d-none d-lg-block">
@@ -60,9 +60,7 @@
                 <div class="row py-lg-5">
                     <div class="col-12 col-md-8 bg-success mx-auto p-2 p-sm-3 p-lg-5 text-center">
                         <h1 class="fw-light text-white">Courses</h1>
-                        <p class="lead text-white">Something short and leading about the collection below—its contents, the
-                            creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
-                            entirely.</p>
+                        <p class="lead text-white">Fine Arts Community Education has a well-earned reputation for quality. Our school has been educating adults, teens, and kids about the arts for nearly two decades.</p>
                         <p>
                             <span class="badge courses-badge rounded-pill bg-info">
                                 Visual Arts<span class="badge courses-badge rounded-pill bg-secondary">4</span>
@@ -102,11 +100,10 @@
                             <img src="pics/learn-painting.jpg" class="card-img-top" alt="Learn Painting">
                             <div class="card-body">
                                 <h2 class="card-title">Learn Painting</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">This course will introduce you to the essential techniques of painting. Use of acrylic, oil-based, and watercolor paints will be covered. Must be familiar with color theory and foundational drawing.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Tues. 6:00-7:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$50 + Supplies</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$50 + Supplies</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -121,10 +118,10 @@
                             <img src="pics/great-books-story-time.jpg" class="card-img-top" alt="Great Books Story Time">
                             <div class="card-body">
                                 <h2 class="card-title">Great Books Story Time</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Gather on the magic carpet to enter worlds of adventure and whimsy. Meet the Storybook Lady who will introduce youngsters to classic children's books that have been the favorites of little ones for generations.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Sat. 7:00-8:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">FREE</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">FREE</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -138,10 +135,10 @@
                             <img src="pics/sunday-speaker-series.jpg" class="card-img-top" alt="Sunday Speaker Series">
                             <div class="card-body">
                                 <h2 class="card-title">Sunday Speaker Series</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Distinguished speakers from the some of the world's most prestigious institutions and most celebrated companies have graced the lecturn in the FACE convocation hall. </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Sun. 7:00-9:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$100</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$100</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -156,10 +153,10 @@
                             <img src="pics/have-fun-with-art.jpg" class="card-img-top" alt="Have Fun with Art">
                             <div class="card-body">
                                 <h2 class="card-title">Have Fun with Art</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Learning to express yourself creatively means taking time to play and have fun. This course allows particpants of all ages to freely use the art rooms to work on the projects that inspire them.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Sat. 7:00-8:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$50 + Supplies</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$50 + Supplies</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -175,10 +172,10 @@
                             <img src="pics/learn-photography.jpg" class="card-img-top" alt="Learn Photography">
                             <div class="card-body">
                                 <h2 class="card-title">Learn Photography</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">This course will introduce you to the essential techniques of photography.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Wed. 6:00-7:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$50 + Supplies</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$50 + Supplies</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -193,10 +190,10 @@
                             <img src="pics/comedic-improv.jpg" class="card-img-top" alt="Comedic Improv">
                             <div class="card-body">
                                 <h2 class="card-title">Comedic Improv</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">FACE offers this very popular course in improvisational comedy. Learn to create hilarious sketches on the fly while interacting with fellow learners.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Thurs. 7:00-8:30 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$10</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$10</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -211,10 +208,10 @@
                             <img src="pics/orchestra-rehearsal.jpg" class="card-img-top" alt="Orchestra Rehearsal">
                             <div class="card-body">
                                 <h2 class="card-title">Orchestra Rehearsal</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">Observation of the FACE orchestra during weekly rehearsals is limited to ticket holders only.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Mon. 8:00-9:30 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$5</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$5</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -228,10 +225,10 @@
                             <img src="pics/3d-printing-for-everyone.jpg" class="card-img-top" alt="3-D Printing for Everyone">
                             <div class="card-body">
                                 <h2 class="card-title">3-D Printing for Everyone</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">This course will show you how to use a 3-D printer and special software to create digital designs that can become physical objects.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Wed. 6:00-7:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$5 + Supplies</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$5 + Supplies</a>
                                 </div>
                             </div>
                             <div class="card-footer">
@@ -246,10 +243,10 @@
                             <img src="pics/maker-culture-for-kids.jpg" class="card-img-top" alt="Maker Culture for Kids">
                             <div class="card-body">
                                 <h2 class="card-title">Maker Culture for Kids</h2>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text">The DIY (Do It Yourself) lifestyle is the way of the future. Let our instructors show your kids how to become makers.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Fri. 7:00-8:00 PM</small>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">$30 + Supplies</button>
+                                    <a href="fees.html" class="btn btn-sm btn-outline-secondary">$30 + Supplies</a>
                                 </div>
                             </div>
                             <div class="card-footer">
